# Trade-CLI

./: .env.example  .gitignore  CLAUDE.md  Fase 1.md  PHASE2-IMPROVEMENT-PLAN.md  README.md  TRADECLI-ROADMAP.md  main.py  obsidian-mcp.json  projeto-ia-trading-forex.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.obsidian/: graph.json  workspace.json
Trade-CLI-Vault/00-meta/: ANTIGRAVITY-SESSION-2026-05-01.md  index.md  template-asset-hub.md  template-daily-context.md  template-playbook.md  template-postmortem.md  template-thesis.md  template-training-note.md
Trade-CLI-Vault/ativos/: EURUSD.md  NAS100.md  NZDUSD.md  US30.md  USDCAD.md  USDJPY.md
Trade-CLI-Vault/conceitos/: BOS.md  FVG.md  MSS.md  confluence.md  displacement.md  index.md  killzone.md  liquidity-sweep.md  market-regime.md  order-block.md
Trade-CLI-Vault/metodos/: ICT.md  Price-Action.md  SMC.md  Sentiment-Analysis.md  Volume-Profile.md  Wyckoff.md  index.md
Trade-CLI-Vault/revisoes/: 2026-05-01-EURUSD-H1-outcome.md  README.md  index.md
Trade-CLI-Vault/teses/: 2026-05-01-EURUSD-H1.md  2026-05-01-USDJPY-H4.md
Trade-CLI-Vault/treino/: README.md  index.md
cli/: launcher.py  main.py
cli/tui/: app.py
cli/tui/screens/: dashboard.py
cli/tui/theme/: candles.py  trade_cli.tcss
cli/tui/widgets/: asset_sidebar.py  candle_chart.py  engine_scores.py  verdict_panel.py
config/: assets.yaml  ftmo-rules.yaml
core/: analysis_schema.py  risk_guardian.py
data/: __init__.py  mock_data.py  mt5_client.py
db/: db_schema.sql  migrations.py
docs/: decisions-phase1.md  decisions-phase2.md  obsidian-structure.md  phase1-architecture.md  phase2-progress.md
engines/: __init__.py  intermarket.py  sentiment.py  volume.py
knowledge/: __init__.py  chunk_vectorizer.py  context_builder.py  obsidian_reader.py  rag_retriever.py
orchestrator/: __init__.py  chat_engine.py  llm_client.py  orchestrator.py
tests/: test_chat_engine.py  test_core.py  test_data.py  test_engines.py  test_llm_client.py  test_orchestrator.py  test_phase2_lite.py  test_phase2_modules.py  test_rag.py
training/: __init__.py  chunker.py  ingest.py  kb_writer.py  tagger.py
