# ============================================================
# Trade-CLI — pyproject.toml
# Fase 2 — 2026-05-01
# ============================================================

[project]
name = "trade-cli"
version = "0.2.0"
description = "Local AI Copilot for Forex Trading Decisions"
requires-python = ">=3.11"

[project.scripts]
tradecli = "main:main"
trade-cli = "main:main"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
exclude = [".venv", "dist", "build"]

[tool.ruff.isort]
known-first-party = ["core", "engines", "data", "orchestrator", "training", "knowledge", "cli", "db"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not slow'"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["core", "engines"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
