[project]
name = "trade-cli"
version = "0.2.0"
description = "Local AI Trading Specialist — Forex Copilot for the Terminal"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
tradecli = "main:main"
trade-cli = "main:main"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501", "B008"]
exclude = [".venv", "dist", "build", "__pycache__"]

[tool.ruff.isort]
known-first-party = [
  "core", "engines", "data", "orchestrator",
  "training", "knowledge", "cli", "db"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not slow'"
asyncio_mode = "auto"
markers = [
  "slow: testes pesados (sentence-transformers, RAG completo)",
  "integration: testes que requerem Ollama ou MT5",
  "unit: testes rápidos sem dependências externas",
]

[tool.coverage.run]
source = ["core", "engines", "data", "orchestrator", "training", "knowledge"]
omit = ["tests/*", "*/__init__.py", "*/migrations.py"]

[tool.coverage.report]
fail_under = 75
show_missing = true
